->0.6

Changed internal handling of alpha and beta parameters (alphatot and betatot) and -A/B interface.
Fixed bug with multicore when huge number of topics causing underflow of Twt (tables for
topic-word matrix).
Made -M operate off wall-time.
Added ability to have a constant alpha vector (not just symmetric) -- intended for use
on restart after akpha vector is estimated.
Extend diagostic reporting on topics.
Sorted topics on output so now most frequent first.

->0.61

Made reports address -rphi restart.
Setup -Apdp and -Bpdp so they could be used with restart and .alpha/.beta files
Subtle bug in get_probs() when zerod topics

-> 0.62

Installed -Ang.
Updated the man page.

-> 0.63

Improved -Ang using the non table-indicator version.
Corrected and installed IBP with -Ang with standard install.
Added some man entries for this.
Cleaned up hca_reset_stats() and placed data correcting
   code into correct.c
Added an asymptotic approximation to S tables that automatically
   kicks in once the tables are overran.