@@ -19,12 +19,15 @@ Subtle bug in get_probs() when zerod topics
 
 Installed -Ang.
 Updated the man page.
+Fixed the "-orat" option and diagnostics.
+Added a word-cloud generator.
+
 
 -> 0.63
 
 Improved -Ang using the non table-indicator version.
 Corrected and installed IBP with -Ang with standard install.
-Added some man entries for this.
+Revised man entries for this.
 Cleaned up hca_reset_stats() and placed data correcting
    code into correct.c
 Added an asymptotic approximation to S tables that automatically
